# aurora

./: pyproject.toml  request_test.py
app/: main.py
app/ui/pages/: home.md
app/ui/templates/: page.html
input/: test.csv
src/: chat_gpt_request.py
