[tool.poetry]
name = "aurora-backend"
version = "0.1.0"
description = ""
authors = ["Arnold Unterauer <arnold.unterauer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
Markdown = "^3.4.1"
requests = "^2.28.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
